# my-architect

./: CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
dev-ledger/: 2026-07-18.jsonl  2026-07-22.jsonl
src/myarchitect/: __main__.py  breakdown.py  cli.py  context.py  dag.py  emit.py  sources.py  tool.py
tests/: test_breakdown.py  test_cli.py  test_context.py  test_dag.py  test_emit.py  test_sources.py  test_tool.py
