[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "my-architect"
version = "0.0.1"
description = "The fleet's autonomous work-breakdown: decomposes one objective issue into an ordered, dependency-tagged backlog of task issues."
authors = [{ name = "Lorenzo Liuzzo", email = "lorenzoliuzzo@outlook.com" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = ["my-things-core"]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-cov>=5", "ruff>=0.6", "pre-commit>=3"]

[project.scripts]
myarchitect = "myarchitect.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/myarchitect"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.coverage.report]
# Meaningful only now that the package ships a real skeleton; CI runs pytest
# with --cov, so a coverage regression fails the build.
fail_under = 85

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = ["slow: integration/slow tests, excluded from the fast local loop"]
# Prepend the in-tree src/ so pytest always imports this checkout's package,
# not a stale editable install pointing elsewhere (e.g. a sibling worktree
# under my-coder). Keeps the suite hermetic regardless of install state.
pythonpath = ["src"]
